fix: characters were off screen

--- a/css/footer.css
+++ b/css/footer.css
@@ -804,10 +804,6 @@
     color: #111 !important;
 }
 
-.footer.footer-light .calendar-bar .day-name {
-    color: #444 !important;
-}
-
 .footer.footer-light .day.weekend .day-num {
     color: var(--accent-color) !important;
 }
